# innernet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-docker-images.sh  generate_manpage.sh  network-tests.sh  release.sh  release.toml  run-docker-tests.sh  rustfmt.toml  taplo.toml
.github/workflows/: docker-tests.yml  release-artifacts.yml  release.yml  rust.yml
arch/: .gitignore  PKGBUILD
ci/: innernet-ref.txt
cli/: Cargo.toml  innernet.target  innernet@.service
client/: Cargo.toml  innernet@.service
client-core/: Cargo.toml
client-core/examples/: add_cidr.rs  add_peer.rs  set_listen_port.rs
client-core/src/: data_store.rs  interface.rs  lib.rs  nat.rs  peer.rs  rest_api.rs  rest_client.rs
client/.rpm/: innernet.spec
client/src/: data_store.rs  ice.rs  lib.rs  main.rs  nat.rs  util.rs
deb/: install.sh  package.sh
doc/: innernet-server.8  innernet-server.completions.bash  innernet-server.completions.elvish  innernet-server.completions.fish  innernet-server.completions.powershell  innernet-server.completions.zsh  innernet.8  innernet.completions.bash  innernet.completions.elvish  innernet.completions.fish  innernet.completions.powershell  innernet.completions.zsh
docker-tests/: Dockerfile.innernet  Dockerfile.innernet-server  build-docker-images.sh  run-docker-tests.sh  start-client.sh  start-server.sh
dockerfiles/: start-client.sh
formnet/: Cargo.toml
formnet/src/: client.rs  lib.rs  main.rs
hostsfile/: Cargo.toml  README.md
hostsfile/src/: lib.rs
macos/: install.sh
netlink-request/: Cargo.toml  README.md
netlink-request/src/: lib.rs
publicip/: Cargo.toml  README.md
publicip/src/: lib.rs  main.rs
rpm/: Dockerfile  build-package.sh
server/: Cargo.toml  build.rs  innernet-server@.service
server/.rpm/: innernet-server.spec
server/src/: endpoints.rs  error.rs  initialize.rs  lib.rs  main.rs  test.rs  util.rs
server/src/api/: mod.rs  user.rs
server/src/api/admin/: association.rs  cidr.rs  mod.rs  peer.rs
server/src/db/: association.rs  cidr.rs  mod.rs  peer.rs
shared/: Cargo.toml
shared/bindings/: Association.ts  Cidr.ts  Endpoint.ts  Hostname.ts  Peer.ts  State.ts
shared/src/: cli.rs  interface_config.rs  lib.rs  netlink.rs  peer.rs  prompts.rs  types.rs  wg.rs
ui/: .gitignore  README.md  generate-ts-bindings.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: nav.tsx  peer.tsx
ui/src/model/shared/: State.ts
ui/src/pages/: config.tsx  server.tsx
ui/src/routes/: index.tsx  utils.tsx
ui/src/stores/: ConfigStore.ts
ui/src/utils/: hooks.ts
wgctrl-rs/: Cargo.toml
wgctrl-rs/examples/: list_devices.rs
wgctrl-rs/src/: config.rs  device.rs  key.rs  lib.rs
wgctrl-rs/src/backends/: kernel.rs  userspace.rs
wgctrl-sys/: Cargo.toml  build.rs
wireguard-control/: Cargo.toml  README.md
wireguard-control-sys/: Cargo.toml  README.md  build.rs  upgrade.sh
wireguard-control-sys/bindgen-bindings/: bindings.rs
wireguard-control-sys/c/: wireguard.c
wireguard-control-sys/src/: lib.rs
wireguard-control/examples/: enumerate.rs
wireguard-control/src/: config.rs  device.rs  key.rs  lib.rs
wireguard-control/src/backends/: kernel.rs  kernelopenbsd.rs  mod.rs  openbsd.rs  userspace.rs
