[workspace]
resolver = "2"

members = [
  "server",
  "client",
  "hostsfile",
  "shared",
  "publicip",
  "netlink-request",
]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"

[workspace.package]
keywords = ["innernet", "networking", "overlay", "vpn", "wireguard"]

[workspace.dependencies]
dialoguer = { version = "0.11", default-features = false }
# Constrain console below 0.15.8 because that version breaks prefilled prompts
# See https://github.com/tonarino/innernet/issues/338
console = { version = "0.15.0, <0.15.8" }
