[package]
authors = [
  "Jake McGinty <me@jakebot.org>",
  "Brian Schwind <brian@tonari.no>",
  "Ryo Kawaguchi <ryo@tonari.no>",
  "Matěj Laitl <matej@tonari.no>",
  "Marek Bernat <marek@tonari.no>",
]
categories = ["network-programming"]
description = "A core library to manage innernet network interfaces."
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "innernet-client-core"
publish = true
readme = "../README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.1"

[dependencies]
anyhow = "1"
colored.workspace = true
innernet-shared = { version = "1.7.1", path = "../shared" }
log = "0.4"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", default-features = false, features = ["json"] }
wireguard-control = { version = "1.7.1", path = "../wireguard-control" }

[dev-dependencies]
once_cell = "1.17.1"
tempfile = "3"
env_logger = "0.7"

[features]
selinux = ["innernet-shared/selinux"]
