[package]
authors = ["Jake McGinty <jake@tonari.no>"]
description = "A client to manage innernet network interfaces."
edition = "2018"
homepage = "https://github.com/tonarino/innernet"
license = "MIT"
name = "client"
publish = false
repository = "https://github.com/tonarino/innernet"
version = "1.3.0-beta.4"

[[bin]]
name = "innernet"
path = "src/main.rs"

[dependencies]
colored = "2"
dialoguer = "0.8"
hostsfile = { path = "../hostsfile" }
indoc = "1"
ipnetwork = { git = "https://github.com/mcginty/ipnetwork" } # pending https://github.com/achanda/ipnetwork/pull/129
lazy_static = "1"
libc = "0.2"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared", default-features = false }
structopt = "0.3"
ureq = { version = "2", default-features = false, features = ["json"] }
wgctrl = { path = "../wgctrl-rs" }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
assets = [
  ["target/release/innernet", "usr/bin/", "755"],
  ["target/release/innernet", "usr/bin/inn", "755"],
  ["innernet@.service", "usr/lib/systemd/system/", "644"],
  ["../doc/innernet.8.gz", "usr/share/man/man8/", "644"],
]
depends = "libc6, libgcc1, systemd"
extended-description = "innernet client binary for fetching peer information and conducting admin tasks such as adding a new peer."
maintainer = "tonari <hey@tonari.no>"
name = "innernet"
priority = "optional"
section = "net"

[package.metadata.rpm]
package = "innernet"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.files]
"../innernet@.service" = { path = "/usr/lib/systemd/system/innernet@.service" }
"../../doc/innernet-server.8.gz" = { path = "/usr/share/man/man8/innernet.8.gz" }

[package.metadata.rpm.targets]
innernet = { path = "/usr/bin/innernet" }
