[package]
authors = ["Jake McGinty <jake@tonari.no>"]
description = "A client to manage innernet network interfaces."
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
license = "MIT"
name = "client"
publish = false
repository = "https://github.com/tonarino/innernet"
version = "1.5.4-beta.5"

[[bin]]
name = "innernet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
colored = "2"
clap = { version = "3", features = ["derive"] }
clap_complete = "3"
dialoguer = { version = "0.10", default-features = false }
hostsfile = { path = "../hostsfile" }
indoc = "1"
ipnet = { version = "2.4", features = ["serde"] }
lazy_static = "1"
log = "0.4"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared", default-features = false }
ureq = { version = "2", default-features = false, features = ["json"] }
wireguard-control = { path = "../wireguard-control" }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
assets = [
  ["target/release/innernet", "usr/bin/", "755"],
  ["target/release/innernet", "usr/bin/inn", "755"],
  ["innernet@.service", "usr/lib/systemd/system/", "644"],
  ["../doc/innernet.8.gz", "usr/share/man/man8/", "644"],
  ["../doc/innernet.completions.bash", "etc/bash_completion.d/innernet", "644"],
  ["../doc/innernet.completions.fish", "usr/share/fish/vendor_completions.d/innernet.fish", "644"],
  ["../doc/innernet.completions.zsh", "usr/share/zsh/site-functions/_innernet", "644"],
]
depends = "libc6, libgcc1, systemd"
recommends = "wireguard"
extended-description = "innernet client binary for fetching peer information and conducting admin tasks such as adding a new peer."
maintainer = "tonari <hey@tonari.no>"
name = "innernet"
priority = "optional"
section = "net"

[package.metadata.rpm]
package = "innernet"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.files]
"../../doc/innernet.8.gz" = { path = "/usr/share/man/man8/innernet.8.gz" }
"../innernet@.service" = { path = "/usr/lib/systemd/system/innernet@.service" }
"../../doc/innernet.completions.bash" = { path = "/etc/bash_completion.d/innernet" }
"../../doc/innernet.completions.fish" =  { path = "/usr/share/fish/vendor_completions.d/innernet.fish" }
"../../doc/innernet.completions.zsh" =  { path = "/usr/share/zsh/site-functions/_innernet" }

[package.metadata.rpm.targets]
innernet = { path = "/usr/bin/innernet" }
