[package]
authors = [
  "Jake McGinty <me@jakebot.org>",
  "Brian Schwind <brian@tonari.no>",
  "Ryo Kawaguchi <ryo@tonari.no>",
  "Matěj Laitl <matej@tonari.no>",
]
categories = ["command-line-utilities", "network-programming"]
description = "A client to manage innernet network interfaces."
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "innernet"
publish = true
readme = "../README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.1"

[[bin]]
name = "innernet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
clap_complete = "4.3"
colored = "2"
dialoguer.workspace = true
indoc = "2.0.1"
innernet-shared = { version = "1.7.1", path = "../shared" }
innernet-client-core = { version = "1.7.1", path = "../client-core" }
log = "0.4"
regex = { version = "1", default-features = false, features = ["std"] }
ureq = { version = "2", default-features = false, features = ["json"] }
wireguard-control = { version = "1.7.1", path = "../wireguard-control" }

[features]
selinux = ["innernet-shared/selinux"]

[package.metadata.deb]
assets = [
  ["target/release/innernet", "usr/bin/", "755"],
  ["innernet@.service", "usr/lib/systemd/system/", "644"],
  ["../doc/innernet.8.gz", "usr/share/man/man8/", "644"],
  ["../doc/innernet.completions.bash", "etc/bash_completion.d/innernet", "644"],
  ["../doc/innernet.completions.fish", "usr/share/fish/vendor_completions.d/innernet.fish", "644"],
  ["../doc/innernet.completions.zsh", "usr/share/zsh/site-functions/_innernet", "644"],
]
depends = "libc6, libgcc1, systemd"
recommends = "wireguard"
extended-description = "innernet client binary for fetching peer information and conducting admin tasks such as adding a new peer."
maintainer = "tonari <hey@tonari.no>"
name = "innernet"
priority = "optional"
section = "net"

[package.metadata.rpm]
package = "innernet"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.files]
"../../doc/innernet.8.gz" = { path = "/usr/share/man/man8/innernet.8.gz" }
"../innernet@.service" = { path = "/usr/lib/systemd/system/innernet@.service" }
"../../doc/innernet.completions.bash" = { path = "/etc/bash_completion.d/innernet" }
"../../doc/innernet.completions.fish" = { path = "/usr/share/fish/vendor_completions.d/innernet.fish" }
"../../doc/innernet.completions.zsh" = { path = "/usr/share/zsh/site-functions/_innernet" }

[package.metadata.rpm.targets]
innernet = { path = "/usr/bin/innernet" }
