[package]
authors = [
    "Andrew Smith as@formation.cloud"
]
description = "A service that uses innernet behind the scenes to coordinate the formation fog network."
edition = "2021"
license = "MIT"
name = "formnet"
publish = false
readme = "README.md"
version = "0.1.0"

[features]
integration = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "formnet"
path = "src/main.rs"

[[bin]]
name = "formnet-client"
path = "src/client.rs"


[dependencies]
innernet-server = { path = "../server" }
client = { path = "../client" }
wireguard-control = { path = "../wireguard-control" }
form-types = { path = "../../form-types" }
tokio = { version = "1", features=["full"] }
clap = { version = "4.5.23", features=["derive"] }
conductor = { git = "https://github.com/versatus/conductor.git" }
shared = { path = "../shared" }
ipnet = "2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.83"
bincode = "1.3.3"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
simple_logger = "5.0.0"
log4rs = "1.3.0"

[dev-dependencies]
random_word = { version = "0.4.3", features = ["en"] }
