[package]
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
description = "A simplistic /etc/hosts file editor."
edition = "2021"
license = "MIT"
name = "hostsfile"
publish = false
version = "1.2.0"

[dependencies]
log = "0.4"
selinux = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
