[package]
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
categories = ["command-line-interface", "network-programming"]
description = "A simplistic programmatic /etc/hosts file editor"
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "hostsfile"
publish = true
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.1"

[dependencies]
log = "0.4"
selinux = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
