[package]
name = "netlink-request"
version = "1.5.5"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.5"
netlink-packet-core = "0.5"
netlink-packet-generic = "0.3.2"
netlink-packet-route = "0.15.0"
netlink-packet-utils = "0.5.2"
nix = { version = "0.25", features = ["feature"] }
once_cell = "1"
