[package]
authors = ["Jake McGinty <me@jakebot.org>"]
categories = ["network-programming", "os::unix-apis"]
description = "A helper to perform requests using the Linux netlink interface"
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "netlink-request"
publish = true
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-sys = "0.8.5"
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.21"
netlink-packet-utils = "0.5.2"
nix = { version = "0.25", features = ["feature"] }
once_cell = "1"
