[package]
authors = ["Jake McGinty <me@jakebot.org>"]
categories = ["command-line-utilities", "network-programming"]
description = "A simple library to get your public IP (IPv4 and/or IPv6)"
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "innernet-publicip"
publish = true
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.0"

[dependencies]
