[package]
authors = [
  "Jake McGinty <me@jakebot.org>",
  "Brian Schwind <brian@tonari.no>",
  "Ryo Kawaguchi <ryo@tonari.no>",
  "Matěj Laitl <matej@tonari.no>",
]
description = "A server to coordinate innernet networks."
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
license = "MIT"
name = "innernet-server"
publish = false
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.6.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "innernet-server"
path = "src/main.rs"

[features]
v6-test = []

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
clap_complete = "4.3"
colored = "2"
dialoguer = { version = "0.10", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
  "http1",
  "server",
  "runtime",
  "stream",
] }
indoc = "2.0.1"
ipnet = { version = "2.4", features = ["serde"] }
libc = "0.2"
libsqlite3-sys = "0.26"
log = "0.4"
once_cell = "1.17.1"
parking_lot = "0.12"
pretty_env_logger = "0.4"
publicip = { path = "../publicip" }
regex = { version = "1", default-features = false, features = ["std"] }
rusqlite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
subtle = "2"
thiserror = "1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.10"
url = "2"
wireguard-control = { path = "../wireguard-control" }

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.5.2", features = ["all"] }

# Workaround for https://github.com/rusqlite/rusqlite/issues/914
[target.'cfg(target_env = "musl")'.dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"

[package.metadata.deb]
assets = [
  [
    "target/release/innernet-server",
    "usr/bin/",
    "755",
  ],
  [
    "innernet-server@.service",
    "usr/lib/systemd/system/",
    "644",
  ],
  [
    "../doc/innernet-server.8.gz",
    "usr/share/man/man8/",
    "644",
  ],
  [
    "../doc/innernet-server.completions.zsh",
    "usr/share/zsh/site-functions/_innernet-server",
    "644",
  ],
  [
    "../doc/innernet-server.completions.bash",
    "etc/bash_completion.d/innernet-server",
    "644",
  ],
  [
    "../doc/innernet-server.completions.fish",
    "usr/share/fish/vendor_completions.d/innernet-server.fish",
    "644",
  ],
]
depends = "libc6, libgcc1, libsqlite3-0, zlib1g, systemd"
maintainer = "tonari <hey@tonari.no>"
name = "innernet-server"
priority = "optional"
recommends = "wireguard"
section = "net"

[package.metadata.rpm]
package = "innernet-server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.files]
"../../doc/innernet-server.8.gz" = { path = "/usr/share/man/man8/innernet-server.8.gz" }
"../../doc/innernet-server.completions.bash" = { path = "/etc/bash_completion.d/innernet-server" }
"../../doc/innernet-server.completions.fish" = { path = "/usr/share/fish/vendor_completions.d/innernet-server.fish" }
"../../doc/innernet-server.completions.zsh" = { path = "/usr/share/zsh/site-functions/_innernet-server" }
"../innernet-server@.service" = { path = "/usr/lib/systemd/system/innernet-server@.service" }

[package.metadata.rpm.targets]
innernet-server = { path = "/usr/bin/innernet-server" }
