[package]
authors = [
  "Jake McGinty <me@jakebot.org>",
  "Brian Schwind <brian@tonari.no>",
  "Ryo Kawaguchi <ryo@tonari.no>",
  "Matěj Laitl <matej@tonari.no>",
]
categories = ["network-programming"]
description = "Library utilities shared between innernet (client) and innernet-server"
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "MIT"
name = "innernet-shared"
publish = true
readme = "../README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.6.1"

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
colored = "2.0"
# Explicitly mention dialoguer's dependency to constrain its version in workspace `Cargo.toml`
console.workspace = true
dialoguer.workspace = true
hostsfile = { version = "1.6.1", path = "../hostsfile" }
indoc = "2.0.1"
innernet-publicip = { version = "1.6.1", path = "../publicip" }
ipnet = { version = "2.4", features = ["serde"] }
libc = "0.2"
log = "0.4"
once_cell = "1.17.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8.10"
url = "2"
wireguard-control = { path = "../wireguard-control" }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-route = "0.21"
netlink-request = { path = "../netlink-request" }
netlink-sys = "0.8.5"

[target.'cfg(any(target_os = "macos", target_os= "openbsd"))'.dependencies]
nix = "0.26"

[features]
selinux = ["hostsfile/selinux"]
