[package]
authors = ["K900 <me@0upti.me>", "Jake McGinty <jake@tonari.no>"]
categories = ["external-ffi-bindings", "os::unix-apis"]
description = "Raw bindings to the WireGuard embeddable C library"
license = "LGPL-2.1-or-later"
name = "wireguard-control-sys"
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.5.2"

[dependencies]
libc = "0.2"

[features]
buildtime_bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0", default-features = false, optional = true }
cc = "1.0"
