[package]
authors = ["K900 <me@0upti.me>", "Jake McGinty <me@jakebot.org>"]
categories = ["os::unix-apis"]
description = "High level bindings to the WireGuard embeddable C library"
edition = "2021"
license = "LGPL-2.1-or-later"
name = "wireguard-control"
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
publish = true
version = "1.6.1"

[dependencies]
base64 = "0.13.1"
hex = "0.4.3"
libc = "0.2"
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.21"
netlink-packet-utils = "0.5.2"
netlink-packet-wireguard = "0.2.3"
netlink-request = { path = "../netlink-request", version = "1.6.1" }
netlink-sys = "0.8"

[target.'cfg(target_os = "openbsd")'.dependencies]
nix = { version = "0.30.1" , features = ["net"] }