[package]
authors = ["K900 <me@0upti.me>", "Jake McGinty <me@jakebot.org>"]
categories = ["os::unix-apis"]
description = "High level bindings to the WireGuard embeddable C library"
edition = "2021"
homepage = "https://github.com/tonarino/innernet"
keywords.workspace = true
license = "LGPL-2.1-or-later"
name = "wireguard-control"
publish = true
readme = "README.md"
repository = "https://github.com/tonarino/innernet"
version = "1.7.1"

[dependencies]
base64 = "0.13.1"
hex = "0.4.3"
libc = "0.2"
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.21"
netlink-packet-utils = "0.5.2"
# Pin the version to "0.2.3" because "0.2.4" bumps its `netlink-packet-generic` dependency to
# "0.4.0", which is incompatible with our "0.3.3" version above.
netlink-packet-wireguard = "=0.2.3"
netlink-request = { version = "1.7.1", path = "../netlink-request" }
netlink-sys = "0.8"

[target.'cfg(target_os = "openbsd")'.dependencies]
nix = { version = "0.30.1", features = ["net"] }
